crates/cypher-fmt/src/snapshots/cypher_fmt__tests__snap_return_distinct.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"MATCH (n) RETURN DISTINCT n\")"
---
MATCH (n)
RETURN DISTINCT n
