crates/cypher-fmt/src/snapshots/cypher_fmt__tests__snap_return_multiple_items.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"MATCH (n) RETURN n.name, n.age, n.id\")"
---
MATCH (n)
RETURN n.name, n.age, n.id
