crates/cypher-fmt/src/snapshots/cypher_fmt__tests__snap_skip_limit.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"MATCH (n) RETURN n SKIP 10 LIMIT 5\")"
---
MATCH (n)
RETURN n
SKIP 10
LIMIT 5
