crates/cypher-fmt/src/snapshots/cypher_fmt__tests__snap_trailing_commas_always.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "format_with(\"MATCH (n) RETURN n.name, n.age, n.id\", &opts).unwrap()"
---
MATCH (n)
RETURN n.name, n.age, n.id
