crates/cypher-fmt/src/snapshots/cypher_fmt__tests__snap_trailing_semicolon.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"MATCH (n) RETURN n;\")"
---
MATCH (n)
RETURN n;
