crates/cypher-fmt/src/snapshots/cypher_fmt__tests__snap_unwind.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"UNWIND [1,2,3] AS x RETURN x\")"
---
UNWIND [1,2,3] AS x
RETURN x
