crates/cypher-fmt/src/snapshots/cypher_fmt__tests__snap_where_and.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"MATCH (n) WHERE n.a > 1 AND n.b < 2 RETURN n\")"
---
MATCH (n)
WHERE n.a > 1 AND n.b < 2
RETURN n
